--- a/css/styles.css
+++ b/css/styles.css
@@ -213,7 +213,7 @@ body {
   letter-spacing: 0.06em;
   text-decoration: none;
   min-width: 200px;
-  padding: 10px 32px;
+  padding: 10px 29px;
   border: 1px solid transparent;
   border-radius: 4px;
   color: var(--body-background-button-font-color);
@@ -238,11 +238,7 @@ body {
   margin-right: auto;
   padding-top: 200px;
   padding-bottom: 200px;
-  background-image: linear-gradient(
-      to right,
-      rgba(47, 48, 58, 0.8),
-      rgba(47, 48, 58, 0.8)
-    ),
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)),
     url('../images/Hero-img.jpg');
   background-size: cover;
   background-repeat: no-repeat;
@@ -755,4 +751,29 @@ footer {
   padding: 25px 100px;
   background: #f5f4fa;
   border-radius: 4px;
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  min-width: 528px;
+  min-height: 581px;
+  background-color: #ffffff;
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+  visibility: hidden;
 }
