--- a/css/styles.css
+++ b/css/styles.css
@@ -50,6 +50,13 @@ body {
 }
 /* Навигация сайта*/
 
+.page-header {
+  position: fixed;
+  background-color: #ffffff;
+  width: 100%;
+  z-index: 10;
+}
+
 .site-navigation {
   list-style-type: none;
   margin-top: 0;
@@ -753,6 +760,7 @@ footer {
   position: fixed;
   top: 0;
   left: 0;
+  z-index: 100;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
