--- a/css/styles.css
+++ b/css/styles.css
@@ -212,13 +212,14 @@ body {
   font-size: 16px;
   line-height: 1.87;
   align-items: center;
-  text-align: center;
+  justify-content: center;
   letter-spacing: 0.06em;
   text-decoration: none;
   min-width: 200px;
   padding: 10px 29px;
   border: 1px solid transparent;
   border-radius: 4px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   color: var(--body-background-button-font-color);
   background-color: var(--button-background-links-color);
 }
@@ -770,11 +771,14 @@ footer {
 
 .modal {
   position: absolute;
+  display: block;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
-  min-width: 528px;
-  min-height: 581px;
+  width: 528px;
+  height: 581px;
+  padding: 40px;
+  text-align: center;
   background-color: #ffffff;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -787,4 +791,31 @@ footer {
   opacity: 0;
   pointer-events: none;
   /* visibility: hidden; */
+}
+
+.modal-title {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  color: var(--headers-names-links-color);
+}
+
+.close {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+.form .button.primary {
+  margin-top: 30px;
+}
+
+.form-input {
+  display: inline-block;
+  width: 448px;
+  resize: none;
+}
+
+.form-field:not(:first-child) {
+  margin-top: 28px;
 }
