--- a/css/styles.css
+++ b/css/styles.css
@@ -781,6 +781,9 @@ footer {
   text-align: center;
   background-color: #ffffff;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 1px 3px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
 }
 
 .backdrop.is-hidden .modal {
@@ -800,22 +803,158 @@ footer {
   color: var(--headers-names-links-color);
 }
 
-.close {
+.button-close {
   position: absolute;
-  top: 0;
-  right: 0;
+  top: 8px;
+  right: 8px;
+  width: 30px;
+  height: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: none;
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  color: #000000;
+}
+
+.button-close:hover,
+.button-close:focus {
+  color: var(--button-background-links-color);
+}
+
+.icon-close {
+  fill: currentColor;
+}
+
+.form {
+  margin-top: 30px;
 }
 
 .form .button.primary {
   margin-top: 30px;
 }
 
-.form-input {
-  display: inline-block;
-  width: 448px;
+.comment-label {
+  position: absolute;
+  top: 0;
+  left: 16px;
+  transform: translate(0, 50%);
+  color: var(--features-header-contacts-color);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    font-size 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.comment-input {
+  display: block;
+  padding: 12px 16px;
+  width: 100%;
+  height: 120px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+
+  border-radius: 4px;
   resize: none;
+}
+
+.comment-input:focus {
+  border: 1px solid #2196f3;
+  outline: transparent;
+}
+
+.form-field:focus-within > .comment-label,
+.comment-input:not(:placeholder-shown) + .comment-label {
+  font-size: 12px;
+  transform: translateY(-80%);
+  color: var(--button-background-links-color);
+}
+
+.form-input {
+  display: block;
+  padding-top: 12px;
+  padding-right: 18px;
+  padding-bottom: 12px;
+  padding-left: 42px;
+  width: 100%;
+  height: 40px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+}
+
+.form-input:focus {
+  border: 1px solid #2196f3;
+  outline: transparent;
+}
+
+.form-field:focus-within > .form-label,
+.form-input:not(:placeholder-shown) + .form-label {
+  font-size: 12px;
+  transform: translate(-26px, -250%);
+  color: var(--button-background-links-color);
+}
+
+.form-field:focus-within > .icon-modal {
+  color: var(--button-background-links-color);
+}
+
+.form-label {
+  position: absolute;
+  top: 50%;
+  left: 42px;
+  transform: translate(0, -50%);
+  line-height: 1.14;
+  letter-spacing: 0.01em;
+  color: var(--features-header-contacts-color);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    font-size 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.icon-modal {
+  display: inline-block;
+  width: 18px;
+  height: 18px;
+  position: absolute;
+  top: 50%;
+  left: 16px;
+  transform: translateY(-50%);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-svg {
+  fill: currentColor;
+}
+
+.form-field {
+  position: relative;
+  display: block;
 }
 
 .form-field:not(:first-child) {
   margin-top: 28px;
+}
+
+.checkbox {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  overflow: hidden;
+  border: 0;
+  clip: rect(0 0 0 0);
+}
+
+.checkbox-label {
+  display: block;
+  margin-top: 20px;
+  color: var(--features-header-contacts-color);
+}
+
+.checkbox-link {
+  color: var(--button-background-links-color);
+}
+
+.checkbox-icon {
+  display: inline-block;
+  width: 16px;
+  height: 15px;
 }
